Fixed alignment issue with portfolio page and added clearfix

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -10,18 +10,23 @@
     display: block;
 }
 
+#content {
+    width: 960px;
+    padding: 0px 20px 20px 20px
+}
+
 .portfolio-item {
     position: relative;
     float: left;
-    width: 300px;
-    height: 225px;  
-    margin-top: 30px; 
-    margin-right: 30px; 
+    width: 295px;
+    height: 220px;
+    margin-top: 10px;
+    margin-right: 30px;
 }
 
 img {
-    width: 300px;
-    height: 225px;
+    width: 295px;
+    height: 220px;
     float: left;
     position: relative;
 }
@@ -33,7 +38,7 @@ img {
     text-align: center;
     float: left;
     position: absolute;  
-    width: 300px; 
+    width: 295px; 
     height: 40px;
     font-size: 18px;
     padding-top: 10px;
