--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,6 @@ p:last-child {
     border-top: 8px solid #F4B49C;
     background-color: #fef2ec;
 }
-/* 
-    bottom: 0px;
-    width: 100%;    
-    position: absolute; */
 
 /* Contact Page */
 
